--- a/ppg/pg-12-major-upgrade/molecule/debian-11/molecule.yml
+++ b/ppg/pg-12-major-upgrade/molecule/debian-11/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-007428d10865c9957
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: admin
     root_device_name: /dev/xvda
     instance_tags:
@@ -20,8 +20,8 @@ provisioner:
     create: ../../../../playbooks/create.yml
     destroy: ../../../../playbooks/destroy.yml
     prepare: ../../../../playbooks/prepare.yml
-    converge: ../../playbooks/playbook.yml
     cleanup: ../../playbooks/cleanup.yml
+    converge: ../../playbooks/playbook.yml
 verifier:
   name: testinfra
   directory: ../../../tests/tests_ppg/
