--- a/ppg/pg-13-major-upgrade/molecule/ubuntu-focal/molecule.yml
+++ b/ppg/pg-13-major-upgrade/molecule/ubuntu-focal/molecule.yml
@@ -1,4 +1,6 @@
 ---
+dependency:
+  name: galaxy
 driver:
   name: ec2
 platforms:
@@ -6,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-0be656e75e69af1a9
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: ubuntu
     root_device_name: /dev/sda1
     instance_tags:
