--- a/ppg/pg-13-major-upgrade/tasks/main.yml
+++ b/ppg/pg-13-major-upgrade/tasks/main.yml
@@ -4,6 +4,16 @@
 - name: Configure repository
   include_tasks: ../../../tasks/install_percona_release.yml
 
+- name: Setting facts so that they will be persisted in the fact cache
+  ansible.builtin.set_fact:
+    pg_version_to_install: "{{ lookup('env', 'FROM_VERSION') | replace('ppg-','') }}"
+
+- name: End play on oracle linux 9
+  meta: end_play
+  when: ansible_os_family == "RedHat" and
+   ansible_distribution_major_version == "9" and
+   pg_version_to_install | string is version('12.13', '<=', strict=True)
+
 - name: Setup initial (old) repository
   command: percona-release enable {{ pg_version }} {{ repo }}
   vars:
@@ -100,6 +110,7 @@
     - percona-postgresql13-pltcl
     - percona-postgresql13-server
     - percona-postgresql13-test
+    - percona-postgresql13-plpython3
     - percona-postgresql13-debuginfo
     - percona-postgresql-client-common
     - percona-postgresql-common
@@ -123,6 +134,7 @@
       - percona-postgresql13-pltcl
       - percona-postgresql13-server
       - percona-postgresql13-test
+      - percona-postgresql13-plpython3
       - percona-postgresql13-contrib-debuginfo
       - percona-postgresql13-debuginfo
       - percona-postgresql13-debugsource
@@ -134,7 +146,28 @@
       - percona-postgresql13-server-debuginfo
       - percona-postgresql-client-common
       - percona-postgresql-common
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+  when: ansible_os_family == "RedHat" and
+      (ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9")
+
+- name: Install pg-stat-monitor RHEL
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+      - percona-pg_stat_monitor13
+  when: ansible_os_family == "RedHat"
+
+- name: Install pg-stat-monitor debian
+  apt:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+      - percona-pg-stat-monitor13
+  when: ansible_os_family == "Debian"
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-13/bin/postgresql-13-setup initdb
@@ -230,36 +263,10 @@
     enabled: true
   when: ansible_os_family == "Debian"
 
-- name: Upgrade debian development packages
-  apt:
-    update_cache: yes
-    state: latest
-    name: "{{ packages }}"
-  vars:
-    packages:
-      - libecpg6
-      - libecpg-compat3
-      - libecpg6
-      - libecpg-dev
-      - libpgtypes3
-      - libpq-dev
-      - libpq5
-  when: ansible_os_family == "Debian"
+- name: Display ppg version
+  become_user: postgres
+  shell: psql -c "select version()"
+  register: results
 
-- name: Install GCC Deb
-  apt:
-    name: gcc
-  when: ansible_os_family == "Debian"
-
-- name: Install GCC RHEL
-  yum:
-    name: gcc
-  when: ansible_os_family == "RedHat"
-
-- name: Create temporary directory for compilation
-  command: mkdir /tmp/libpq_command_temp_dir
-
-- name: Copy libpq source file
-  copy:
-    src: ../../common/files/lib_version.c
-    dest: /tmp/libpq_command_temp_dir
+- debug:
+      var: results.stdout
