--- a/ppg/pg-11-components-with-vanila/molecule/ubuntu-jammy/molecule.yml
+++ b/ppg/pg-11-components-with-vanila/molecule/ubuntu-jammy/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-04aa66cdfe687d427
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: ubuntu
     root_device_name: /dev/sda1
     instance_tags:
@@ -20,7 +20,7 @@ provisioner:
     create: ../../../../playbooks/create.yml
     destroy: ../../../../playbooks/destroy.yml
     prepare: ../../../../playbooks/prepare.yml
-    cleanup: ../../playbooks/cleanup.yml
+    cleanup: ../../playbooks/cleanup-deb.yml
     converge: ../../playbooks/playbook.yml
 verifier:
   name: testinfra
