--- a/ppg/pg-12-components-with-vanila/molecule/centos-7/molecule.yml
+++ b/ppg/pg-12-components-with-vanila/molecule/centos-7/molecule.yml
@@ -6,9 +6,9 @@ driver:
 platforms:
   - name: centos7-${BUILD_NUMBER}-${JOB_NAME}
     region: eu-central-1
-    image: ami-04cf43aca3e6f3de3
+    image: ami-095e1a4d3d632d215
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: centos
     root_device_name: /dev/sda1
     instance_tags:
