--- a/ppg/pg-14-components-with-vanila/molecule/ol-8/molecule.yml
+++ b/ppg/pg-14-components-with-vanila/molecule/ol-8/molecule.yml
@@ -4,12 +4,12 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: centos7-${BUILD_NUMBER}-${JOB_NAME}
+  - name: ol8-${BUILD_NUMBER}-${JOB_NAME}
     region: eu-central-1
-    image: ami-095e1a4d3d632d215
+    image: ami-065e2293a3df4c870
     vpc_subnet_id: subnet-085deaca8c1c59a4f
     instance_type: t2.small
-    ssh_user: centos
+    ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
       iit-billing-tag: jenkins-pg-worker
@@ -41,4 +41,3 @@ scenario:
     - converge
     - verify
     - cleanup
-    - destroy
