Following multiple tasks are part of this commit covering ppg 11~15:
1. Moved PGSM VM from t2.medium to t2.xlarge for ppg-11~15.
2. Added bookwork (debian-12) to debian distros.
3. Adding debian-12 to ppg-11~14. Updated ami-vm for debian 10 & 11.
4. Fix patroni component tests failure for ppg-11~14.
5. Fix patroni test failure on debian-12 for ppg-11~14.
6. Fix pgbackrest component failures ppg-11~14.
7. Added pg_gather v22 product and testcase for ppg-11~14.
8. Adding debian-12 to meta-ha and meta-server ppg-11~14 testing. Also fixed clean up of packages for debian-11.
9. Fixed meta-ha failing testcase for etcd on ppg-11~14.
10. Moved pgbackrest VM from t2.medium to t2.xlarge for ppg-11~15.
11. Updating ppg-15 where pg_gather will not be installed for any ppg-15 version before 15.4. 15.4 is first time we are releasing pg_gather.
12. Adding Debian-12 to ppg-15 minor and major upgrade.
13. Making sure pg_gather is installed only on and onwards where these packages were made available, ppg 15.4, 14.9, 13.12, 12.16, 11.21.
14. Fixed ppg-11~15 upgrade.
15. Added plythonu and plpython2u to be skipped on ppg 12.16.
16. Added Debian-12 to minor and major update scenario for ppg-11~14.

--- a/pgbackrest/ppg-14/tasks/main.yml
+++ b/pgbackrest/ppg-14/tasks/main.yml
@@ -10,6 +10,9 @@
     state: latest
   vars:
     packages:
+      - make
+      - gcc
+      - pkg-config
       - apt-transport-https
       - ca-certificates
       - curl
@@ -25,7 +28,6 @@
       - libssl-dev
       - libxml2-dev
       - libpq-dev
-      - pkg-config
       - valgrind
       - liblz4-dev
       - liblz4-tool
@@ -35,6 +37,10 @@
       - libbz2-dev
       - libyaml-dev
       - meson
+      - libz-dev
+      - libyaml-dev
+      - libssh2-1-dev
+      - psmisc
   retries: 60
   delay: 10
   register: result
@@ -66,7 +72,7 @@
   git:
     repo: "{{ repo }}"
     version: "{{ version }}"
-    dest: /var/lib/postgresql/pgbackrest
+    dest: /tmp/pgbackrest
   vars:
     repo: "{{ lookup('env', 'COMPONENT_REPO') }}"
     version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
@@ -82,13 +88,18 @@
     name: postgresql
     state: stopped
 
+- name: Make sure tcp port 80 is free
+  become: true
+  command: sudo fuser -k 80/tcp
+  ignore_errors: true
+
 - name: Run pgbackrest regression
   become_user: postgres
-  command: pgbackrest/test/test.pl --psql-bin=/usr/lib/postgresql/15/bin \
+  command: pgbackrest/test/test.pl --psql-bin=/usr/lib/postgresql/14/bin \
     --no-valgrind --log-level-test-file=off --no-coverage-report \
-    --module=command --module=storage --vm-out --vm=none --no-coverage
+    --module=command --module=storage --vm-out --vm=none --no-coverage --test-path /tmp
   args:
-    chdir: "/var/lib/postgresql"
+    chdir: "/tmp"
   register: results
 
 - debug:
