--- a/ppg/pg-14-major-upgrade/tasks/main.yml
+++ b/ppg/pg-14-major-upgrade/tasks/main.yml
@@ -21,6 +21,12 @@
    ansible_distribution_major_version == "9" and
    pg_version_to_install | string is version('13.9', '<=', strict=True)
 
+- name: End play on Debian 12
+  meta: end_play
+  when: ansible_os_family == "Debian" and
+   ansible_distribution_major_version == "12" and
+   pg_version_to_install | string is version('13.11', '<=', strict=True)
+
 - name: Setup initial (old) repository
   command: percona-release enable {{ pg_version }} {{ repo }}
   vars:
