--- a/pg_stat_monitor/ppg-15/molecule/default/molecule.yml
+++ b/pg_stat_monitor/ppg-15/molecule/default/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-065e2293a3df4c870
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.medium
+    instance_type: t2.xlarge
     ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
