--- a/ppg/pg-12-meta-server/molecule/debian-11/molecule.yml
+++ b/ppg/pg-12-meta-server/molecule/debian-11/molecule.yml
@@ -20,7 +20,7 @@ provisioner:
     create: ../../../../playbooks/create.yml
     destroy: ../../../../playbooks/destroy.yml
     prepare: ../../../../playbooks/prepare.yml
-    cleanup: ../../playbooks/cleanup.yml
+    cleanup: ../../playbooks/cleanup-deb.yml
     converge: ../../playbooks/playbook.yml
 verifier:
   name: testinfra
