--- a/pg_repack/ppg-11/molecule/default/molecule.yml
+++ b/pg_repack/ppg-11/molecule/default/molecule.yml
@@ -4,12 +4,12 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pgrepack-centos7-${BUILD_NUMBER}
+  - name: pgrepack-ol9-${BUILD_NUMBER}
     region: eu-central-1
-    image: ami-095e1a4d3d632d215
+    image: ami-02952e732e6126584
     vpc_subnet_id: subnet-085deaca8c1c59a4f
     instance_type: t2.small
-    ssh_user: centos
+    ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
       iit-billing-tag: jenkins-pg-worker
