Following changes are done in this commit for Q4-23 minor release. 1. Added versions and settings for Q4-23 PPG minor updates for ppg-11~16. 2. Updated scripts, to reflect pgaudit package name change on RHEL, and server package version on DEB. 3. Fixed the pg_gather test case. 4. Updated postgis packages name change on RHEL for packages install and tests. 5. Updated versions and settings for dockers 11~16 for Q4 release. 6. Fix META Server test case for pg-audit. 7. Reverted postgis version 3.4.0 to 3.3.4. Revert pg_audit, pg_repack, set_user, wal2json component testing to centos7. 8. Added check into ppg-16 for verifying telemetry. 9. Updated the ppg-16 pgaudit and postgis names with variables to accomodate the package name change on different ppg versions. 10. Added conditional check to accommodate pgaudit and postgis, in ppg-parallel and upgrade testing workflows. 11. Added telemetry check and flag to docker. 12. Fixed telemetry test in docker. 13. Added 5 seconds wait before start of docker testing, to make sure docker environment in loaded. 14. Added Telemetry env variable to component testing.

--- a/pg_repack/ppg-16/tasks/main.yml
+++ b/pg_repack/ppg-16/tasks/main.yml
@@ -51,6 +51,8 @@
     - lz4-devel
     - zstd
     - libzstd-devel
+  environment:
+    PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-16/bin/initdb -A trust -k /var/lib/pgsql/16/data
