--- a/pgaudit13_set_user/ppg-16/tasks/main.yml
+++ b/pgaudit13_set_user/ppg-16/tasks/main.yml
@@ -47,6 +47,8 @@
     - readline-devel
     - gcc
     - gcc-c++
+  environment:
+    PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-16/bin/initdb -A trust -k /var/lib/pgsql/16/data
