--- a/tasks/install_ppg16_tools.yml
+++ b/tasks/install_ppg16_tools.yml
@@ -1,4 +1,21 @@
 ---
+  - name: Setting facts so that they will be persisted in the fact cache
+    ansible.builtin.set_fact:
+      pgaudit_rhel_package_name: "percona-pgaudit"
+      postgis_rhel_package_name_prefix: "percona-postgis33"
+
+  - name: Setting facts so that they will be persisted in the fact cache
+    ansible.builtin.set_fact:
+      pgaudit_rhel_package_name: "percona-pgaudit16"
+      postgis_rhel_package_name_prefix: "percona-postgis33_16"
+    when: (pg_version_to_install | string is version('16.1', '>=', strict=True))
+
+  - debug:
+      msg: "Value of pgaudit_rhel_package_name is : {{ pgaudit_rhel_package_name }}"
+
+  - debug:
+      msg: "Value of postgis_rhel_package_name_prefix is : {{ postgis_rhel_package_name_prefix }}"
+
   - name: Install additional tools for pgbackrest test Debian
     apt:
       name: "{{ packages }}"
@@ -42,7 +59,7 @@
 
   - name: Install pgaudit RHEL
     yum:
-      name: percona-pgaudit
+      name: "{{ pgaudit_rhel_package_name }}"
       state: latest
       update_cache: yes
     when: ansible_os_family == "RedHat"
@@ -299,16 +316,14 @@
       update_cache: yes
     vars:
       packages:
-      - percona-postgis33
-      - percona-postgis33-client
-      #- percona-postgis33-client-debuginfo
-      - percona-postgis33-debuginfo
-      - percona-postgis33-devel
-      - percona-postgis33-docs
-      - percona-postgis33-gui
-      #- percona-postgis33-gui-debuginfo
-      - percona-postgis33-llvmjit
-      - percona-postgis33-utils
+      - "{{postgis_rhel_package_name_prefix}}"
+      - "{{postgis_rhel_package_name_prefix}}-client"
+      - "{{postgis_rhel_package_name_prefix}}-debuginfo"
+      - "{{postgis_rhel_package_name_prefix}}-devel"
+      - "{{postgis_rhel_package_name_prefix}}-docs"
+      - "{{postgis_rhel_package_name_prefix}}-gui"
+      - "{{postgis_rhel_package_name_prefix}}-llvmjit"
+      - "{{postgis_rhel_package_name_prefix}}-utils"
     when: ansible_distribution_major_version == "7"
 
   - name: Enable llvm-toolset for RHEL8 to install PostGIS
@@ -323,16 +338,16 @@
       update_cache: yes
     vars:
       packages:
-      - percona-postgis33
-      - percona-postgis33-client
-      - percona-postgis33-client-debuginfo
-      - percona-postgis33-debuginfo
-      - percona-postgis33-devel
-      - percona-postgis33-docs
-      - percona-postgis33-gui
-      - percona-postgis33-gui-debuginfo
-      - percona-postgis33-llvmjit
-      - percona-postgis33-utils
+      - "{{postgis_rhel_package_name_prefix}}"
+      - "{{postgis_rhel_package_name_prefix}}-client"
+      - "{{postgis_rhel_package_name_prefix}}-client-debuginfo"
+      - "{{postgis_rhel_package_name_prefix}}-debuginfo"
+      - "{{postgis_rhel_package_name_prefix}}-devel"
+      - "{{postgis_rhel_package_name_prefix}}-docs"
+      - "{{postgis_rhel_package_name_prefix}}-gui"
+      - "{{postgis_rhel_package_name_prefix}}-gui-debuginfo"
+      - "{{postgis_rhel_package_name_prefix}}-llvmjit"
+      - "{{postgis_rhel_package_name_prefix}}-utils"
     when: ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9"
 
   - name: Install percona-postgis Debian
