Fixed OL9 to install openssl-devel.

--- a/pg_tde/tde/tasks/redhat_tasks.yml
+++ b/pg_tde/tde/tasks/redhat_tasks.yml
@@ -32,6 +32,7 @@
         - autoconf
         - json-c-devel
         - libcurl-devel
+        - openssl-devel
         - perl-IPC-Run
 
   - name: Disable dnf module for RHEL8
