--- a/pg_tde/tde/molecule/ol-8/molecule.yml
+++ b/pg_tde/tde/molecule/ol-8/molecule.yml
@@ -23,12 +23,7 @@ provisioner:
     converge: ../../playbooks/playbook.yml
     verify: ../../playbooks/verify.yml
 verifier:
-  name: testinfra
-  directory: ../../../tests/
-  options:
-    verbose: true
-    s: true
-    junitxml: report.xml
+  name: ansible
 scenario:
   destroy_sequence:
     - destroy
