Adding support for testing multiple ppg extensions with pg_tde.

--- a/pg_tde/tde/tasks/debian_tasks.yml
+++ b/pg_tde/tde/tasks/debian_tasks.yml
@@ -23,11 +23,7 @@
         - libcurl4-openssl-dev
         - libhttp-server-simple-perl
         - libtext-trim-perl
-
-  # - name: Install perl modules
-  #   shell: |
-  #     sudo /usr/bin/perl -MCPAN -e 'install IPC::RUN'
-  #     sudo /usr/bin/perl -MCPAN -e 'install Text::Trim'
+        - python3-dev
 
   - name: Install hashicorp repo and vault
     shell: |
@@ -57,6 +53,73 @@
       - percona-postgresql-pltcl-{{ postgres_version }}
       - percona-postgresql-server-dev-{{ postgres_version }}
       - percona-postgresql-server-dev-all
+    environment:
+      PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
+
+  - name: Install pgaudit Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      postgres_version: "{{ major_version }}"
+      packages:
+        - percona-postgresql-{{ postgres_version }}-pgaudit
+        - percona-postgresql-{{ postgres_version }}-pgaudit-dbgsym
+    environment:
+      PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
+
+  - name: Install percona-pgaudit{{ postgres_version }}_set_user Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      postgres_version: "{{ major_version }}"
+      packages:
+        - percona-pgaudit{{ postgres_version }}-set-user
+        - percona-pgaudit{{ postgres_version }}-set-user-dbgsym
+    environment:
+      PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
+
+  - name: Install pgrepack Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      postgres_version: "{{ major_version }}"
+      packages:
+        - percona-postgresql-{{ postgres_version }}-repack
+        - percona-postgresql-{{ postgres_version }}-repack-dbgsym
+    environment:
+      PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
+
+  - name: Install percona-postgis Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      postgres_version: "{{ major_version }}"
+      packages:
+        - percona-postgresql-{{ postgres_version }}-postgis-3
+        - percona-postgresql-{{ postgres_version }}-postgis-3-scripts
+        - percona-postgresql-postgis-scripts
+        - percona-postgresql-postgis
+        - percona-postgis
+    environment:
+      PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
+
+  - name: Install pg-stat-monitor Debian/Ubuntu Package
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pg-stat-monitor{{ major_version }}
+        - percona-pg-stat-monitor{{ major_version }}-dbgsym
     environment:
       PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
 
@@ -96,7 +159,7 @@
       update_cache: yes
     vars:
       packages:
-        - percona-pgtde{{ major_version }}
+        - percona-postgresql-{{ major_version }}-pg-tde
     when: use_package_install
 
   - name: Add extensions to postgresql.conf for Debian
