Adding arm support to tde basic extension test jobs.

--- a/pg_tde/tde/molecule/debian-11-arm/molecule.yml
+++ b/pg_tde/tde/molecule/debian-11-arm/molecule.yml
@@ -4,11 +4,11 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pgtde-debian12-${BUILD_NUMBER}
+  - name: pgtde-debian11-arm-${BUILD_NUMBER}
     region: eu-central-1
-    image: ami-0584590e5f0e97daa
+    image: ami-079862e16fe3822d0
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.xlarge
+    instance_type: t4g.xlarge
     ssh_user: admin
     root_device_name: /dev/xvda
     instance_tags:
